# ProjectOne

./: .env_template  README.md  pyproject.toml  requirements.txt  user_settings.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_reports_py.html  z_145eef247bfb46b6_services_py.html  z_145eef247bfb46b6_test_read_excel_py.html  z_145eef247bfb46b6_testim_vozvrat_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_views_py.html
src/: main.py  reports.py  services.py  spending_report.json  utils.py  views.py
tests/: test_reports.py  test_sevices.py  test_utils.py  test_views.py
